--- a/client/src/ui/views/Stem/App.css
+++ b/client/src/ui/views/Stem/App.css
@@ -34,12 +34,12 @@ html {
 
 .app {
   width: 100%;
-  height: 100%;
+  height: 90%;
 }
 
-.container {
+.container-f {
   display: flex;
-  height: 100vh;
+  height: 100%;
 }
 
 .blockly-wrapper {
